pgbconsole (current development) unstable; urgency=low

  * Add log tail screen, full log view with PAGER.
  * Add suspend/resume pgcenter execution.
  * Allow change refresh interval.
  * Add psql hotkey.
  * Add reconnect if conn failed (eg pg restart).
  * Add cancel/terminate for process group.
  * Add infrastructure for cancel/terminate group of backends.
  * Add single backend cancel or terminate.
  * Add return error message in higher function from do_query.
  * Add reload_conf() function.
  * Allow editing postgresq/pg_hba/pg_ident/recovery config files.
  * Add show config with shift+C
  * Save conninfo to .pgcenterrc file.
  * Add new conn establishing, closing existing connections.
  * When query failed, print error to w_dba window.
  * Add pg_stat_statements screen.
  * Add autovacuum process counters to sysstat.
  * Print pg process activity info in sysstat window.
  * Print conninfo in sysstat window.
  * Fix pg_stat_user_functions sort order.
  * Add pg_stat_user_functions screen.
  * Add ability to change min age interval for pg_stat_activity long queries.
  * Add cmd_readline from pgbconsole.
  * Add pg_stat_activity long queries screen (based on db_activity).
  * Add relation sizes screen (awesome feature imho).
  * Add pg_statio_user_tables screen, join pg_statio_user_indexes to
    pg_stat_user_indexes screen.
  * Add pg_stat_user_tables, pg_stat_user_indexes screens.
  * Add pg_stat_replication screen, add screens sort order saved between
    screen switches.
  * Add column sort reordering with arrow keys.
  * Move query_context to screen_s struct, add order_key, order_desc params
    into screen_s. It allows store sort order info per screen.
  * Rename conn_opts_struct struct to screen_s, because struct used not only for
    connections.
  * Change pg_stat_database to normal output (changes per sec).
  * Add arrays sorting comparing functions.
  * Add pg_stat_database simple output.
  * Add console switching ability.