@@ -2770,6 +2770,160 @@ void show_full_log(WINDOW * window, struct screen_s * screen, PGconn * conn)
 }
 
 /*
+ *********************************************************** init function **
+ * Init output colors.
+ *
+ * IN:
+ * @ws_color            Sysstat window current color.
+ * @wc_color            Cmdline window current color.
+ * @wa_color            Database answer window current color.
+ * @wl_color            PostgreSQL log file window current color.
+ ****************************************************************************
+ */
+void init_colors(int * ws_color, int * wc_color, int * wa_color, int * wl_color)
+{
+    start_color();
+    init_pair(0, COLOR_BLACK,   COLOR_BLACK);
+    init_pair(1, COLOR_RED,     COLOR_BLACK);
+    init_pair(2, COLOR_GREEN,   COLOR_BLACK);
+    init_pair(3, COLOR_YELLOW,  COLOR_BLACK);
+    init_pair(4, COLOR_BLUE,    COLOR_BLACK);
+    init_pair(5, COLOR_MAGENTA, COLOR_BLACK);
+    init_pair(6, COLOR_CYAN,    COLOR_BLACK);
+    init_pair(7, COLOR_WHITE,   COLOR_BLACK);
+    /* set defaults */
+    *ws_color = 7;
+    *wc_color = 7;
+    *wa_color = 7;
+    *wl_color = 7;
+}
+
+/*
+ ************************************************** color-related function **
+ * Draw help of color-change screen.
+ *
+ * IN:
+ * @ws_color            Sysstat window current color.
+ * @wc_color            Cmdline window current color.
+ * @wa_color            Database answer window current color.
+ * @wl_color            PostgreSQL log file window current color.
+ * @target              Short name of the area which color will be changed.
+ * @target_color        Next color of the area.
+ ****************************************************************************
+ */
+void draw_color_help(WINDOW * w, int * ws_color, int * wc_color, int * wa_color, int * wl_color, int target, int * target_color)
+{
+    wclear(w);
+    wprintw(w, "Help for color mapping - %s, version %.1f.%d\n\n",
+            PROGRAM_NAME, PROGRAM_VERSION, PROGRAM_RELEASE);
+    wattron(w, COLOR_PAIR(*ws_color));
+    wprintw(w, "\tpgcenter: 2015-08-03 16:12:16, load average: 0.54, 0.43, 0.41\n\
+\t    %%cpu:  4.8 us,  5.0 sy,  0.0 ni, 90.2 id,  0.0 wa,  0.0 hi,  0.0 si,  \n\
+\t  conn 1: 127.0.0.1:5432 postgres@pgbench        conn state: ok\n\
+\tactivity:  9 total,  8 idle,  0 idle_in_xact,  1 active,  0 waiting,\n");
+    wattroff(w, COLOR_PAIR(*ws_color));
+
+    wattron(w, COLOR_PAIR(*wc_color));
+    wprintw(w, "\tNasty message or input prompt.\n");
+    wattroff(w, COLOR_PAIR(*wc_color));
+
+    wattron(w, COLOR_PAIR(*wa_color));
+    wattron(w, A_BOLD);
+    wprintw(w, "\tuser      database  calls  calls/s  total_time  read_time  write_time  cpu_\n");
+    wattroff(w, A_BOLD);
+    wprintw(w, "\tpostgres  pgbench   83523  3        9294.62     0.00       0.00        9294\n\
+\tadmin     pgbench   24718  0        30731.86    28672.12   0.00        2059\n\n");
+    wattroff(w, COLOR_PAIR(*wa_color));
+
+    wattron(w, COLOR_PAIR(*wl_color));
+    wprintw(w, "\t< 2015-08-03 16:17:55.848 YEKT >LOG:  database system is ready to accept co\n\
+\t< 2015-08-03 16:17:55.848 YEKT >LOG:  autovacuum launcher started\n\n");
+    wattroff(w, COLOR_PAIR(*wl_color));
+
+    wprintw(w, "1) Select a target as an upper case letter, current target is  %c :\n\
+\tS = Summary Data, M = Messages/Prompt, P = PostgreSQL Information, L = PostgreSQL Log\n", target);
+    wprintw(w, "2) Select a color as a number, current color is  %i :\n\
+\t0 = black,  1 = red,      2 = green,  3 = yellow,\n\
+\t4 = blue,   5 = magenta,  6 = cyan,   7 = white\n", *target_color);
+    wprintw(w, "3) Then use keys: 'Esc' to abort changes, 'Enter' to commit and end.\n");
+
+    touchwin(w);
+    wrefresh(w);
+}
+
+/*
+ ****************************************************** key press function **
+ * Change output colors.
+ *
+ * IN:
+ * @ws_color            Sysstat window current color.
+ * @wc_color            Cmdline window current color.
+ * @wa_color            Database answer window current color.
+ * @wl_color            PostgreSQL log file window current color.
+ ****************************************************************************
+ */
+void change_colors(int * ws_color, int * wc_color, int * wa_color, int * wl_color)
+{
+    WINDOW * w;
+    int ch,
+        target = 'S',
+        * target_color = ws_color;
+    int ws_save = *ws_color,
+        wc_save = *wc_color,
+        wa_save = *wa_color,
+        wl_save = *wl_color;
+    
+    w = subwin(stdscr, 0, 0, 0, 0);
+    echo();
+    cbreak();
+    nodelay(w, FALSE);
+    keypad(w, TRUE);
+
+    do {
+        draw_color_help(w, ws_color, wc_color, wa_color, wl_color, target, target_color);
+        ch = wgetch(w);
+        switch (ch) {
+            case 'S':
+                target = 'S';
+                target_color = ws_color;
+                break;
+            case 'M':
+                target = 'M';
+                target_color = wc_color;
+                break;
+            case 'P':
+                target = 'P';
+                target_color = wa_color;
+                break;
+            case 'L':
+                target = 'L';
+                target_color = wl_color;
+                break;
+            case '0': case '1': case '2': case '3':
+            case '4': case '5': case '6': case '7':
+                *target_color = ch - '0';
+                break;
+            default:
+                break;
+        }
+    } while (ch != '\n' && ch != 27);
+
+    /* if Esc entered, restore previous colors */
+    if (ch == 27) {
+        *ws_color = ws_save;
+        *wc_color = wc_save;
+        *wa_color = wa_save;
+        *wl_color = wl_save;
+    }
+
+    noecho();
+    cbreak();
+    nodelay(w, TRUE);
+    keypad(w, FALSE);
+    delwin(w);
+}
+
+/*
  ****************************************************************************
  * Main program
  ****************************************************************************
@@ -2795,6 +2949,11 @@ int main(int argc, char *argv[])
              sleep_usec = 0;                            /* time spent in sleep  */
 
     char ***p_arr, ***c_arr, ***r_arr;                  /* 3d arrays for query results  */
+
+    int * ws_color = (int *) malloc(sizeof(int)),
+        * wc_color = (int *) malloc(sizeof(int)),
+        * wa_color = (int *) malloc(sizeof(int)),
+        * wl_color = (int *) malloc(sizeof(int));
 
     /* determine actions on receiving signals */
     init_signal_handlers();
@@ -2827,12 +2986,14 @@ int main(int argc, char *argv[])
     w_cmd = newwin(1, 0, 4, 0);
     w_dba = newwin(0, 0, 5, 0);
 
+    init_colors(ws_color, wc_color, wa_color, wl_color);
     curs_set(0);
 
     /* main loop */
     while (1) {
         if (key_is_pressed()) {
             curs_set(1);
+            wattron(w_cmd, COLOR_PAIR(*wc_color));
             ch = getch();
             switch (ch) {
                 case '1': case '2': case '3': case '4': case '5': case '6': case '7': case '8':
@@ -2963,6 +3124,9 @@ int main(int argc, char *argv[])
                 case 'z':
                     interval = change_refresh(w_cmd, interval);
                     break;
+                case 'Z':
+                    change_colors(ws_color, wc_color, wa_color, wl_color);
+                    break;
                 case 32:
                     do_noop(w_cmd, interval);
                     break;
@@ -2975,8 +3139,12 @@ int main(int argc, char *argv[])
                     wprintw(w_cmd, "Unknown command - try 'h' for help.");                                                                                     
                     break;
             }
+            wattroff(w_cmd, COLOR_PAIR(*wc_color));
             curs_set(0);
         } else {
+            wattron(w_sys, COLOR_PAIR(*ws_color));
+            wattron(w_dba, COLOR_PAIR(*wa_color));
+
             reconnect_if_failed(w_cmd, conns[console_index], first_iter);
             wclear(w_sys);
 
@@ -3060,10 +3228,13 @@ int main(int argc, char *argv[])
             wclear(w_cmd);
 
             if (screens[console_index]->log_opened) {
-//                wattron(w_log, COLOR_PAIR(*wl_color));
+                wattron(w_log, COLOR_PAIR(*wl_color));
                 print_log(w_log, w_cmd, screens[console_index], conns[console_index]);
-//                wattroff(w_log, COLOR_PAIR(*wl_color));
+                wattroff(w_log, COLOR_PAIR(*wl_color));
             }
+
+            wattroff(w_sys, COLOR_PAIR(*ws_color));
+            wattroff(w_dba, COLOR_PAIR(*wa_color));
 
             /* sleep loop */
             for (sleep_usec = 0; sleep_usec < interval; sleep_usec += INTERVAL_STEP) {
