@@ -1,5 +1,6 @@
 pgbconsole (current development) unstable; urgency=low
 
+  * Add colors support.
   * Add log tail screen, full log view with PAGER.
   * Add suspend/resume pgcenter execution.
   * Allow change refresh interval.
